--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --ext .js --ext .jsx || true"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.6.5",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^2.3.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.2.0",
     "react": "^0.14.7",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
