--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "react-yo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "reacting",
+  "version": "0.0.1",
+  "description": "Playing around with React",
+  "main": "bundle.js",
   "scripts": {
     "lint": "eslint . --ext .js --ext .jsx || true"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Sebastián Balay <snbalay@gmail.com>",
+  "license": "MIT",
+  "dependencies": {
+    "react": "^0.14.7"
+  },
   "devDependencies": {
     "babel-core": "^6.6.5",
     "babel-eslint": "^5.0.0",
@@ -18,7 +21,6 @@
     "eslint": "^2.3.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.0",
-    "react": "^0.14.7",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
