--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Sebastián Balay <snbalay@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.14.7"
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   },
   "devDependencies": {
     "babel-core": "^6.6.5",
