--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint": "^2.3.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.0",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
