--- a/package.json
+++ b/package.json
@@ -10,24 +10,27 @@
   "author": "Sebastián Balay <snbalay@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bootstrap-sass": "^3.3.6",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
   "devDependencies": {
-    "babel-core": "^6.6.5",
-    "babel-eslint": "^5.0.0",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^2.3.0",
+    "eslint": "^2.9.0",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.2.0",
+    "eslint-plugin-react": "^5.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
+    "file-loader": "^0.8.5",
+    "glob": "^7.0.3",
+    "node-sass": "^3.6.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
 }
