--- a/.eslintrc
+++ b/.eslintrc
@@ -107,7 +107,7 @@
     "no-extend-native": 0,                                              // http://eslint.org/docs/rules/no-extend-native
     "no-extra-bind": 2,                                                 // http://eslint.org/docs/rules/no-extra-bind
     "no-extra-boolean-cast": 2,                                         // http://eslint.org/docs/rules/no-extra-boolean-cast
-    "no-extra-parens": 2,                                               // http://eslint.org/docs/rules/no-extra-parens
+    "no-extra-parens": 0,                                               // http://eslint.org/docs/rules/no-extra-parens
     "no-extra-semi": 2,                                                 // http://eslint.org/docs/rules/no-extra-semi
     "no-fallthrough": 2,                                                // http://eslint.org/docs/rules/no-fallthrough
     "no-floating-decimal": 2,                                           // http://eslint.org/docs/rules/no-floating-decimal
@@ -243,7 +243,7 @@
     "react/jsx-boolean-value": 0,                                       // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-boolean-value.md
     "react/jsx-closing-bracket-location": 2,                            // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-closing-bracket-location.md
     "react/jsx-curly-spacing": [2, "always"],                           // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-curly-spacing.md
-    "react/jsx-equals-spacing": [2, "always"],                          // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-equals-spacing.md
+    "react/jsx-equals-spacing": [2, "never"],                          // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-equals-spacing.md
     "react/jsx-handler-names": 0,                                       // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-handler-names.md
     "react/jsx-indent-props": [2, 2],                                   // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-indent-props.md
     "react/jsx-indent": [2, 2],                                         // https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-indent.md
