--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^3.6.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
