--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^2.4.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
@@ -29,6 +30,7 @@
     "file-loader": "^0.8.5",
     "glob": "^7.0.3",
     "node-sass": "^3.6.0",
+    "postcss-loader": "^0.9.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
