--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.6",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.29.3",
     "react-dom": "^0.14.7",
     "react-router": "^2.4.0"
   },
